[gd_scene load_steps=19 format=3 uid="uid://cmkhsm5b48ug8"]

[ext_resource type="Script" uid="uid://bp7ehospl4poi" path="res://scripts/bird.gd" id="1_crnqq"]
[ext_resource type="Texture2D" uid="uid://3rhvchsx81py" path="res://assets/Pixel Art Bird 16x16/BlackBirdFly.png" id="2_3po83"]
[ext_resource type="Texture2D" uid="uid://b14300prhuxj8" path="res://assets/Pixel Art Bird 16x16/BlackBirdPeck.png" id="3_hq4t0"]
[ext_resource type="Texture2D" uid="uid://cj8pwokxbst2s" path="res://assets/Pixel Art Bird 16x16/BlackBirdIDle.png" id="3_twsrt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hq4t0"]
atlas = ExtResource("2_3po83")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_twsrt"]
atlas = ExtResource("2_3po83")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7mtg"]
atlas = ExtResource("2_3po83")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdh3x"]
atlas = ExtResource("2_3po83")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jggmu"]
atlas = ExtResource("2_3po83")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrcfq"]
atlas = ExtResource("2_3po83")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehebh"]
atlas = ExtResource("2_3po83")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qavic"]
atlas = ExtResource("2_3po83")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ai2xt"]
atlas = ExtResource("3_twsrt")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7a8l"]
atlas = ExtResource("3_twsrt")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifiym"]
atlas = ExtResource("3_hq4t0")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_21s24"]
atlas = ExtResource("3_hq4t0")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wujcm"]
atlas = ExtResource("3_hq4t0")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_6ljjq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hq4t0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_twsrt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7mtg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdh3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jggmu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrcfq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehebh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qavic")
}],
"loop": true,
"name": &"fly",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ai2xt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7a8l")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifiym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21s24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wujcm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifiym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21s24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wujcm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21s24")
}],
"loop": true,
"name": &"peck",
"speed": 5.0
}]

[node name="Bird" type="Node2D"]
scale = Vector2(0.8, 0.8)
script = ExtResource("1_crnqq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource("SpriteFrames_6ljjq")
animation = &"peck"
frame_progress = 0.0235941

[node name="PeckTimer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_looped" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_looped"]
[connection signal="timeout" from="PeckTimer" to="." method="_on_peck_timer_timeout"]
